--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.4",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
