--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@vitejs/plugin-vue": "^5.0.5",
     "vite": "^5.2.13"
   }
